--- a/views/index.jade
+++ b/views/index.jade
@@ -5,7 +5,7 @@ block content
       div(class="content-wrapper")
           hgroup(class="title")
               h1=title 
-              h2 Modify this template to jump-start your node.js express application.
+              h2 Johann was here
           p
             | To learn more about node.js, visit
             a(href="http://nodejs.org", title="node.js Website", target="_blank") http://nodejs.org/
