--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,61 +1,42 @@
 doctype 5
 html
   head
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     - if (typeof(title) == 'undefined')
         title Express Starter Template
-    - else 
+    - else
         title= title
-    
+
     // include default stylesheets and any view stylesheets
-    link(rel='stylesheet', href='/stylesheets/style.css')
-    
-    // include default scripts and any view scripts
-    script(src='/javascripts/jquery-1.8.3.min.js')
-    script(src='/javascripts/modernizr.js')
-    
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+
     block head
-    
-  body   
-    header
-      div(class='content-wrapper')
-        div(class="float-left")
-          p(class="site-title")
-            a(href="/") your logo here
-        div(class="float-right")
-          section#login
-            ul
-            -if(!everyauth.loggedIn)
-                li
-                    a(href="/register") Register
-                li
-                    a(href="/login") Log in
-                    
-            -else
-                -if(everyauth.facebook)
-                    li Welcome !{everyauth.facebook.user.first_name} !{everyauth.facebook.user.last_name}!
-                -else if(everyauth.twitter)
-                    li Welcome !{everyauth.twitter.user.name}!
-                -else if(everyauth.password)
-                    li Welcome!
-                li 
-                    a(href="/logout") Logout
-          nav
-            ul#menu
-              li 
-                a(href="/") Home
-              li 
-                a(href="/chat") Chat
-              li
-                a(href="/about") About
-    #body
-        block content
-      
-    footer
-      div(class="content-wrapper")
-        div(class="float-left")
-          p &copy; !{(new Date()).getFullYear()}
-        div(class="float-right")
-          ul#social
+
+  body
+    nav(class="navbar navbar-inverse")
+      div(class="container")
+        div(class="navbar-header")
+          button(type="button", class="navbar-toggle collapsed", data-toggle="collapse", data-target="#navbar", aria-expandedfalse", aria-controls="navbar")
+          span(class="sr-only") Toggle navigation
+          span(class="icon-bar")
+          span(class="icon-bar")
+          span(class="icon-bar")
+          a(class="navbar-brand", href="#") Hackbar
+        div(id="navbar", class="collapse navbar-collapse")
+          ul(class="nav navbar-nav")
+            li(class="active")
+              a(href="#") Home
             li
-              a(href="http://facebook.com/MicrosoftWebMatrix", class="facebook") Facebook
-              a(href="http://twitter.com/WebMatrix", class="twitter") Twitter
+              a(href="#") About
+            li
+              a(href="#") Contact
+    div#body(class="container")
+        block content
+
+    footer
+      div(class="container")
+          p &copy; HackaTUM !{(new Date()).getFullYear()}
