--- a/views/layout.jade
+++ b/views/layout.jade
@@ -11,8 +11,10 @@ html
 
     // include default stylesheets and any view stylesheets
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    link(rel="stylesheet", href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css")
+    link(rel="stylesheet", href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css")
+    script(src='/javascripts/jquery-1.8.3.min.js')
+    script(src='/javascripts/modernizr.js')
 
     block head
 
@@ -31,7 +33,7 @@ html
             li(class="active")
               a(href="#") Home
             li
-              a(href="#") About
+              a(href="/chat") Chat
             li
               a(href="#") Contact
     div#body(class="container")
