--- a/views/layout.jade
+++ b/views/layout.jade
@@ -33,6 +33,8 @@ html
             li(class="active")
               a(href="#") Home
             li
+              a(href="/spotify") Spotify controls
+            li
               a(href="/chat") Chat
             li
               a(href="#") Contact
