Get currently playing song

--- a/views/spotify/index.jade
+++ b/views/spotify/index.jade
@@ -8,3 +8,5 @@ block content
         li: a(href="/spotify/pause") Pause
         li: a(href="/spotify/skipToNext") Skip to next
         li: a(href="/spotify/volume") Set volume
+        li: a(href="/spotify/currentlyplaying") Currently playing
+
