--- a/views/spotify/index.jade
+++ b/views/spotify/index.jade
@@ -9,4 +9,5 @@ block content
         li: a(href="/spotify/skipToNext") Skip to next
         li: a(href="/spotify/volume") Set volume
         li: a(href="/spotify/currentlyplaying") Currently playing
+        li: a(href="/spotify/playlist/tracks") List playlist tracks
 
