--- a/views/spotify/index.jade
+++ b/views/spotify/index.jade
@@ -10,4 +10,5 @@ block content
         li: a(href="/spotify/volume") Set volume
         li: a(href="/spotify/currentlyplaying") Currently playing
         li: a(href="/spotify/playlist/tracks") List playlist tracks
+        li: a(href="/spotify/search") Search
 
