added volume voting entity and basic voting

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -35,6 +35,8 @@ html
             li
               a(href="/spotify") Spotify controls
             li
+              a(href="/vote/volume") Volume voting
+            li
               a(href="/chat") Chat
             li
               a(href="#") Contact
