--- a/views/spotify/index.jade
+++ b/views/spotify/index.jade
@@ -11,5 +11,6 @@ block content
         li: a(href="/spotify/currentlyplaying") Currently playing
         li: a(href="/spotify/playlist/tracks") List playlist tracks
         li: a(href="/spotify/addtoplaylist") Add song to playlist
+        li: a(href="/spotify/removefromplaylist") Remove song to playlist
         li: a(href="/spotify/search") Search
 
