First UI draft for queue

--- a/views/index.jade
+++ b/views/index.jade
@@ -1,5 +1,79 @@
 extends layout
 
 block content
-    h1 Testing!
+    .container
+        .list
+            .item
+                a.item-swipe(href='#') Item 1
+                .item-back
+                    button.action.first.btn-delete(type='button')
+                        i.fa.fa-trash-o
+                    button.action.second.btn-check(type='button')
+                        i.fa.fa-check
+            .item
+                a.item-swipe(href='#') Item 2
+                .item-back
+                    button.action.first.btn-delete(type='button')
+                        i.fa.fa-trash-o
+                    button.action.second.btn-check(type='button')
+                        i.fa.fa-check
+            .item
+                a.item-swipe(href='#') Item 3
+                .item-back
+                    button.action.first.btn-delete(type='button')
+                        i.fa.fa-trash-o
+                    button.action.second.btn-check(type='button')
+                        i.fa.fa-check
+            .item
+                a.item-swipe(href='#') Item 4
+                .item-back
+                    button.action.first.btn-delete(type='button')
+                        i.fa.fa-trash-o
+                    button.action.second.btn-check(type='button')
+                        i.fa.fa-check
+            .item
+                a.item-swipe(href='#') Item 5
+                .item-back
+                    button.action.first.btn-delete(type='button')
+                        i.fa.fa-trash-o
+                    button.action.second.btn-check(type='button')
+                        i.fa.fa-check
+            .item
+                a.item-swipe(href='#') Item 6
+                .item-back
+                    button.action.first.btn-delete(type='button')
+                        i.fa.fa-trash-o
+                    button.action.second.btn-check(type='button')
+                        i.fa.fa-check
+            .item
+                a.item-swipe(href='#') Item 7
+                .item-back
+                    button.action.first.btn-delete(type='button')
+                        i.fa.fa-trash-o
+                    button.action.second.btn-check(type='button')
+                        i.fa.fa-check
+            .item
+                a.item-swipe(href='#') Item 8
+                .item-back
+                    button.action.first.btn-delete(type='button')
+                        i.fa.fa-trash-o
+                    button.action.second.btn-check(type='button')
+                        i.fa.fa-check
+            .item
+                a.item-swipe(href='#') Item 9
+                .item-back
+                    button.action.first.btn-delete(type='button')
+                        i.fa.fa-trash-o
+                    button.action.second.btn-check(type='button')
+                        i.fa.fa-check
+            .item
+                a.item-swipe(href='#') Item 10
+                .item-back
+                    button.action.first.btn-delete(type='button')
+                        i.fa.fa-trash-o
+                    button.action.second.btn-check(type='button')
+                        i.fa.fa-check
+    script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js')
+    script(src='/javascripts/main.js')
+    script(src='/javascripts/swipeTo.js')
 
