store access token in database

--- a/views/spotify/index.jade
+++ b/views/spotify/index.jade
@@ -4,6 +4,7 @@ block content
     h1 Spotify controller
 
     ul
+        li: a(href="/spotify/auth") Auth
         li: a(href="/spotify/play") Play
         li: a(href="/spotify/pause") Pause
         li: a(href="/spotify/skipToNext") Skip to next
