--- a/public/stylesheets/all.css
+++ b/public/stylesheets/all.css
@@ -1,3 +1,6 @@
+button {
+  border-radius: 0;
+}
 .list .item {
   border-bottom: 1px solid #e1e1e1;
   height: 40px;
@@ -50,7 +53,7 @@
 .list .item .item-back .action.second {
   right: 50px;
 }
-.btn-delete {
+.btn-like {
   background: #b22222;
 }
 .btn-check {
@@ -98,6 +101,654 @@ body {
   right: 0;
   bottom: 0;
   left: 0;
+}
+@keyframes expand-on {
+  from {
+    transform: translateY(160px);
+    opacity: 0;
+  }
+  to {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+@keyframes expand-off {
+  from {
+    transform: translateY(0);
+    opacity: 1;
+  }
+  to {
+    transform: translateY(160px);
+    opacity: 0;
+  }
+}
+@keyframes fade-in {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+/*************************************************/
+/*.detail .info img { width: 100%; }
+.detail .info img { opacity: 0 }
+.detail.lock .info img { opacity: 0 !important; }
+.detail.ready .info img { opacity: 1; animation: fade-in .4s ease }*/
+/* this must be important */
+/*#4f6 #82d*/
+/** Pure Css Slider **/
+@keyframes animate_height {
+  0% {
+    height: 5%;
+  }
+  50% {
+    height: 95%;
+  }
+  100% {
+    height: 20%;
+  }
+}
+body {
+  font-family: 'Roboto', sans-serif;
+  color: #444;
+  background-color: #f3f3f3;
+  background-color: #e3e3e3;
+}
+.wrapper {
+  background-color: #f8f8f8;
+  position: relative;
+  display: flex;
+  height: 610px;
+  width: 100%;
+  margin: 10px auto;
+  box-shadow: 0px 2px 15px #ddc;
+}
+.list {
+  width: 100%;
+  height: 100%;
+}
+.list header {
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline;
+  padding: 0 15px 0 35px;
+  box-shadow: 0 1px 15px #e3e3e3;
+}
+.list header > * {
+  display: inline-block;
+}
+.list header h3 {
+  min-width: 220px;
+  font-weight: 400;
+  font-size: 20px;
+  margin: 15px 20px 15px 40px;
+  flex-grow: 1;
+}
+.list header i {
+  font-size: 24px;
+}
+.list section {
+  height: calc(36%);
+  overflow: hidden;
+}
+.list-item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 5px;
+  height: 84px;
+}
+.list-item > * {
+  display: inline-block;
+  vertical-align: middle;
+}
+.list-item .thumb {
+  width: 64px;
+  height: 64px;
+  margin: 10px;
+}
+.list-item img {
+  position: absolute;
+  left: 12px;
+  width: 64px;
+  height: 64px;
+  border-radius: 5px;
+  box-shadow: 0px 2px 5px #999;
+  cursor: pointer;
+  z-index: 1;
+  transition: all .4s ease;
+}
+.list-item img.open {
+  top: 0 !important;
+  left: 0;
+  height: 365px;
+  width: 100%;
+  z-index: 10;
+  transition: all 0.4s ease-in-out;
+}
+.list-item span {
+  margin-bottom: 5px;
+}
+.list-item small {
+  color: #888;
+  font-size: 12px;
+}
+.list-item .title {
+  flex-grow: 1;
+  padding-left: 5px;
+  min-width: 190px;
+}
+.list-item .title > * {
+  display: block;
+}
+.list-item .length {
+  padding: 20px;
+}
+.detail {
+  display: none;
+  flex-direction: column;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 12px;
+  z-index: 10;
+}
+.detail i.close {
+  opacity: 0;
+  position: absolute;
+  right: 15px;
+  top: 10px;
+  color: #fff;
+  font-size: 24px;
+  text-shadow: 1px 1px 5px #444;
+  transition: text-shadow 0.4s ease;
+  cursor: pointer;
+  z-index: 100;
+}
+.detail i.close:hover {
+  text-shadow: 1px 1px 2px #888;
+  transition: text-shadow 0.4s ease;
+}
+.detail .info .thumb {
+  opacity: 0;
+}
+.detail .info .thumb > div {
+  width: 100%;
+}
+.detail.open {
+  display: flex;
+}
+.detail.open i.close {
+  opacity: 1;
+  animation: fade-in 0.6s ease;
+}
+.detail.open .info .title {
+  animation: expand-on 0.5s ease;
+}
+.detail.open .player {
+  animation: expand-on 0.25s ease;
+}
+.detail.lock .info .title {
+  animation: expand-off 0.3s ease;
+}
+.detail.lock .info .thumb {
+  opacity: 0 !important;
+}
+.detail.lock .player {
+  animation: expand-off 0.3s ease;
+}
+.info {
+  position: relative;
+  width: 100%;
+  overflow: hidden;
+}
+.info .title {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-grow: .02;
+  background: #fff;
+}
+.info .title i {
+  opacity: 0;
+  font-size: 22px;
+  color: #888;
+}
+.info .title i:nth-child(1) {
+  transform: translateX(40px);
+}
+.info .title i:nth-child(3) {
+  transform: translateX(-40px);
+}
+.info .title h3 {
+  text-align: center;
+  font-weight: 500;
+}
+.info .title h3 > * {
+  display: block;
+}
+.info .title h3 span {
+  margin-bottom: 5px;
+}
+.info .title h3 small {
+  font-size: 14px;
+  font-weight: 400;
+}
+.info .slide {
+  display: flex;
+  flex-direction: column;
+}
+.info .thumb {
+  flex-grow: 1;
+}
+.player {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  background-color: #fff;
+  flex-grow: 1;
+}
+.player .track {
+  opacity: 0;
+  padding: 0 10px;
+}
+.player .track .counter {
+  display: flex;
+  justify-content: space-between;
+  font-size: 11px;
+  font-weight: 500;
+  color: #666;
+  margin-top: 5px;
+}
+.player .track .progress {
+  width: 100%;
+  height: 3px;
+  margin-bottom: 10px;
+  border-radius: 5px;
+  position: relative;
+  background-color: rgba(0, 0, 0, 0.3);
+  cursor: pointer;
+  margin-top: -4px;
+}
+.player .track .bar {
+  position: absolute;
+  background-color: #666;
+  height: 100%;
+  width: 0;
+  border-radius: 10px;
+  transition: all .4s ease;
+}
+.player .track .bar:before {
+  content: "";
+  display: block;
+  position: absolute;
+  right: -3px;
+  width: 4px;
+  height: 8px;
+  top: -2px;
+}
+.player .controls {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+.player .controls i {
+  opacity: 0;
+  font-size: 26px;
+  color: #666;
+}
+.player .controls i:nth-child(1) {
+  transform: translateX(80px);
+}
+.player .controls i:nth-child(2) {
+  transform: translateX(40px);
+}
+.player .controls i:nth-child(4) {
+  transform: translateX(-40px);
+}
+.player .controls i:nth-child(5) {
+  transform: translateX(-80px);
+}
+.player .controls .zmdi-skip-next {
+  cursor: pointer;
+}
+.detail.ready .info .title > * {
+  opacity: 1;
+  transform: translateX(0);
+  transition: all .4s ease;
+}
+.detail.ready .info .thumb {
+  opacity: 1;
+  animation: fade-in 0.4s ease;
+  background-color: #444;
+}
+.detail.ready .player .track {
+  opacity: 1;
+  transform: translateX(0);
+  transition: all .4s ease;
+}
+.detail.ready .player .controls > * {
+  opacity: 1;
+  transform: translateX(0);
+  transition: all .4s ease;
+}
+.slider {
+  position: relative;
+  -webkit-transition: -webkit-transform 0.6s cubic-bezier(0.51, 0.92, 0.24, 1);
+  transition: -webkit-transform 0.6s cubic-bezier(0.51, 0.92, 0.24, 1);
+  transition: transform 0.6s cubic-bezier(0.51, 0.92, 0.24, 1);
+  transition: transform 0.6s cubic-bezier(0.51, 0.92, 0.24, 1), -webkit-transform 0.6s cubic-bezier(0.51, 0.92, 0.24, 1);
+  will-change: transform;
+  width: calc(2190px);
+}
+.slider .slide {
+  display: none;
+  float: left;
+  display: flex;
+  width: 400px;
+}
+.slider .slide:nth-child(1) {
+  display: flex !important;
+}
+.slider .slide .thumb {
+  height: 365px;
+  position: relative;
+  transition: transform 0.6s cubic-bezier(0.51, 0.92, 0.24, 1);
+}
+.slider .slide .thumb > div {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: calc(51%);
+  background-size: cover;
+  transition: transform 0.4s cubic-bezier(0.51, 0.92, 0.24, 1);
+}
+.slider .slide .thumb > div:first-child {
+  background-position: top left;
+}
+.slider .slide .thumb > div:last-child {
+  background-position: bottom left;
+  top: 50%;
+}
+.slide .thumb.skewLeft > div {
+  transition: all 0.6s cubic-bezier(0.51, 0.92, 0.24, 1);
+}
+.slide .thumb.skewLeft > div:first-child {
+  transform: skew(-3deg) translateX(-8px);
+}
+.slide .thumb.skewLeft > div:last-child {
+  transform: skew(3deg) translateX(-8px);
+}
+.slide .thumb.skewRight > div {
+  transition: all 0.6s cubic-bezier(0.51, 0.92, 0.24, 1);
+}
+.slide .thumb.skewRight > div:first-child {
+  transform: skew(3deg) translateX(8px);
+}
+.slide .thumb.skewRight > div:last-child {
+  transform: skew(-3deg) translateX(8px);
+}
+.wrapper[data-pos="0"] .slider {
+  -webkit-transform: translateX(0);
+  transform: translateX(0);
+}
+.wrapper[data-pos="0"] .player-indicator {
+  background-color: #009688;
+  transition: all 0.4s ease-in-out;
+  top: 78px;
+}
+.wrapper[data-pos="0"] .player .track .bar {
+  background-color: #009688;
+  transition: all 0.4s ease-in-out;
+}
+.wrapper[data-pos="0"] .player .track .bar:before {
+  background-color: #009688;
+  transition: all 0.4s ease-in-out;
+}
+.wrapper[data-pos="0"] .player .track .progress {
+  background-color: rgba(0, 150, 136, 0.3);
+}
+.wrapper[data-pos="0"] .player .playbtn {
+  background-color: #009688;
+  transition: all 0.4s ease-in-out;
+}
+.wrapper[data-pos="1"] .slider {
+  -webkit-transform: translateX(-365px);
+  transform: translateX(-365px);
+}
+.wrapper[data-pos="1"] .player-indicator {
+  background-color: #3f51b5;
+  transition: all 0.4s ease-in-out;
+  top: calc(167px);
+}
+.wrapper[data-pos="1"] .player .track .bar {
+  background-color: #3f51b5;
+  transition: all 0.4s ease-in-out;
+}
+.wrapper[data-pos="1"] .player .track .bar:before {
+  background-color: #3f51b5;
+  transition: all 0.4s ease-in-out;
+}
+.wrapper[data-pos="1"] .player .track .progress {
+  background-color: rgba(63, 81, 181, 0.3);
+}
+.wrapper[data-pos="1"] .player .playbtn {
+  background-color: #3f51b5;
+  transition: all 0.4s ease-in-out;
+}
+.wrapper[data-pos="2"] .slider {
+  -webkit-transform: translateX(-730px);
+  transform: translateX(-730px);
+}
+.wrapper[data-pos="2"] .player-indicator {
+  background-color: #607d8b;
+  transition: all 0.4s ease-in-out;
+  top: calc(257px);
+}
+.wrapper[data-pos="2"] .player .track .bar {
+  background-color: #607d8b;
+  transition: all 0.4s ease-in-out;
+}
+.wrapper[data-pos="2"] .player .track .bar:before {
+  background-color: #607d8b;
+  transition: all 0.4s ease-in-out;
+}
+.wrapper[data-pos="2"] .player .track .progress {
+  background-color: rgba(96, 125, 139, 0.3);
+}
+.wrapper[data-pos="2"] .player .playbtn {
+  background-color: #607d8b;
+  transition: all 0.4s ease-in-out;
+}
+.wrapper[data-pos="3"] .slider {
+  -webkit-transform: translateX(-1095px);
+  transform: translateX(-1095px);
+}
+.wrapper[data-pos="3"] .player-indicator {
+  background-color: #5a472e;
+  transition: all 0.4s ease-in-out;
+  top: calc(345px);
+}
+.wrapper[data-pos="3"] .player .track .bar {
+  background-color: #5a472e;
+  transition: all 0.4s ease-in-out;
+}
+.wrapper[data-pos="3"] .player .track .bar:before {
+  background-color: #5a472e;
+  transition: all 0.4s ease-in-out;
+}
+.wrapper[data-pos="3"] .player .track .progress {
+  background-color: rgba(90, 71, 46, 0.3);
+}
+.wrapper[data-pos="3"] .player .playbtn {
+  background-color: #5a472e;
+  transition: all 0.4s ease-in-out;
+}
+.wrapper[data-pos="4"] .slider {
+  -webkit-transform: translateX(-1460px);
+  transform: translateX(-1460px);
+}
+.wrapper[data-pos="4"] .player-indicator {
+  background-color: #ee7733;
+  transition: all 0.4s ease-in-out;
+  top: calc(434px);
+}
+.wrapper[data-pos="4"] .player .track .bar {
+  background-color: #ee7733;
+  transition: all 0.4s ease-in-out;
+}
+.wrapper[data-pos="4"] .player .track .bar:before {
+  background-color: #ee7733;
+  transition: all 0.4s ease-in-out;
+}
+.wrapper[data-pos="4"] .player .track .progress {
+  background-color: rgba(238, 119, 51, 0.3);
+}
+.wrapper[data-pos="4"] .player .playbtn {
+  background-color: #ee7733;
+  transition: all 0.4s ease-in-out;
+}
+.wrapper[data-pos="5"] .slider {
+  -webkit-transform: translateX(-1825px);
+  transform: translateX(-1825px);
+}
+.wrapper[data-pos="5"] .player-indicator {
+  background-color: #f44336;
+  transition: all 0.4s ease-in-out;
+  top: calc(523px);
+}
+.wrapper[data-pos="5"] .player .track .bar {
+  background-color: #f44336;
+  transition: all 0.4s ease-in-out;
+}
+.wrapper[data-pos="5"] .player .track .bar:before {
+  background-color: #f44336;
+  transition: all 0.4s ease-in-out;
+}
+.wrapper[data-pos="5"] .player .track .progress {
+  background-color: rgba(244, 67, 54, 0.3);
+}
+.wrapper[data-pos="5"] .player .playbtn {
+  background-color: #f44336;
+  transition: all 0.4s ease-in-out;
+}
+.playbtn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 48px;
+  height: 48px;
+  background: #bbb;
+  border-radius: 50%;
+  cursor: pointer;
+}
+.playbtn span {
+  display: block;
+  margin-left: 5px;
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 10px 0 10px 20px;
+  border-color: transparent transparent transparent #fff;
+  transition: all .5s ease;
+}
+.playbtn span:before {
+  display: block;
+  content: "";
+  width: 0;
+  height: 0;
+  position: relative;
+  left: 12px;
+  background-color: #fff;
+}
+.playbtn.pause span {
+  margin-left: -10px;
+  width: 7px;
+  height: 20px;
+  border-width: 0;
+  background-color: #fff;
+  transition: all .5s ease;
+}
+.playbtn.pause span:before {
+  width: 7px;
+  height: 20px;
+}
+.analyser {
+  width: 100%;
+  height: 24px;
+}
+.player-indicator {
+  display: none;
+  position: absolute;
+  right: 15px;
+  top: 75px;
+  cursor: pointer;
+  transition: top .4s ease;
+}
+.player-indicator .playb {
+  padding: 9px 6px 7px 10px;
+  color: white;
+}
+.player-indicator .bars {
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  width: 36px;
+  height: 32px;
+  margin: 2px 0;
+}
+.player-indicator .bars div {
+  display: flex;
+  align-items: flex-end;
+  width: 5px;
+  margin-left: 1px;
+  background-color: rgba(255, 255, 255, 0.2);
+  height: 100%;
+}
+.player-indicator .bars div:before {
+  content: "";
+  display: block;
+  width: 100%;
+  background-color: rgba(137, 255, 0, 0.5);
+  animation: animate_height 1s ease-in-out infinite;
+}
+.player-indicator .bars div:nth-child(2):before {
+  animation-delay: .5s;
+  animation-timing-function: ease-out;
+}
+.player-indicator .bars div:nth-child(3):before {
+  animation-delay: .2s;
+  animation-timing-function: ease-in;
+}
+.player-indicator .bars div:nth-child(4):before {
+  animation-delay: .4s;
+}
+.player-indicator .bars div:nth-child(5):before {
+  animation-delay: .1s;
+}
+.wrapper.playing .player-indicator {
+  display: flex;
+}
+.wrapper.playing .player-indicator .playb:before {
+  content: "❚❚";
+  display: block;
+  position: relative;
+  left: -1px;
+}
+.wrapper.paused .player-indicator {
+  display: flex;
+}
+.wrapper.paused .player-indicator .bars div:before {
+  height: 0;
+  animation: none;
+}
+.wrapper.paused .player-indicator .playb:before {
+  content: "►";
+  display: block;
 }
 #chat {
   border: 1px solid #999;
