--- a/public/stylesheets/main.less
+++ b/public/stylesheets/main.less
@@ -1,5 +1,8 @@
 @import 'variables';
 
+button {
+  border-radius: 0;
+}
 .list {
 	.item {
 		border-bottom: 1px solid @lightgray;
@@ -57,7 +60,7 @@
 	}
 }
 
-.btn-delete {
+.btn-like {
 	background: @firebrick;
 }
 
