--- a/views/layout.jade
+++ b/views/layout.jade
@@ -14,33 +14,19 @@ html
 
     link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css')
     link(rel='stylesheet', href='/stylesheets/all.css')
-    link(rel='stylesheet prefetch', href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css')
+    link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css')
+    link(rel='stylesheet prefetch', href='https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.2.0/css/material-design-iconic-font.min.css')
+    link(rel='stylesheet prefetch', href='https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css')
+    link(rel='stylesheet prefetch', href='https://fonts.googleapis.com/icon?family=Material+Icons')
     link(rel='stylesheet prefetch', href='https://fonts.googleapis.com/css?family=Roboto:400,400italic,300italic,300,700,700italic')
+
     script(src='/javascripts/jquery-1.8.3.min.js')
     script(src='/javascripts/modernizr.js')
 
     block head
 
   body
-    nav(class="navbar navbar-inverse")
-      div(class="container")
-        div(class="navbar-header")
-          button(type="button", class="navbar-toggle collapsed", data-toggle="collapse", data-target="#navbar", aria-expandedfalse", aria-controls="navbar")
-          span(class="sr-only") Toggle navigation
-          span(class="icon-bar")
-          span(class="icon-bar")
-          span(class="icon-bar")
-          a(class="navbar-brand", href="#") Hackbar
-        div(id="navbar", class="collapse navbar-collapse")
-          ul(class="nav navbar-nav")
-            li(class="active")
-              a(href="#") Home
-            li
-              a(href="/spotify") Spotify controls
-            li
-              a(href="/vote/volume") Volume voting
-            li
-              a(href="/chat") Chat
+    block nav
 
     //div#body(class="")
     block content
@@ -50,3 +36,8 @@ html
           p
           p
           p &copy; HackaTUM !{(new Date()).getFullYear()}
+
+          script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js')
+          script(src='/javascripts/main.js')
+          script(src='/javascripts/swipeTo.js')
+          script(src='/javascripts/jquery.knob.js')
