--- a/views/player/queue.jade
+++ b/views/player/queue.jade
@@ -1,21 +1,5 @@
 extends ../layout
 
-- if (typeof(artist) == 'undefined')
-    title unknown artist
-- else
-    artist=artist
-
-- if (typeof(album) == 'undefined')
-    title unknown album
-- else
-    album=album
-
-- if (typeof(endtime) == 'undefined')
-    title 0:00
-- else
-    endtime=endtime
-
-
 block nav
     include ../nav.jade
 
@@ -23,7 +7,7 @@ block content
     .wrapper
         .list
             .item
-                a.item-swipe(href='/?title=Song1&artist=test&album=test&endtime=3:22') Song 1
+                a.item-swipe(href='/') Song 1
                 .item-back
                     button.action.first.btn-dislike(type='button')
                         i.fa.fa-thumbs-o-down
