--- a/public/stylesheets/player.less
+++ b/public/stylesheets/player.less
@@ -305,6 +305,7 @@
         opacity: 1;
         transform: translateX(0);
         transition: all .4s ease;
+        font-size: 16px;
       }
     }
     .thumb {
